--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_timezone: ^4.0.0
   flutter_easyloading: ^3.0.5
   cached_network_image: ^3.2.3
+  firebase_core: ^3.10.1
 
 dependency_overrides:
   intl: ^0.18.1
