--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_easyloading: ^3.0.5
   cached_network_image: ^3.2.3
   firebase_core: ^3.10.1
+  firebase_auth: ^5.3.4
 
 dependency_overrides:
   intl: ^0.18.1
